--- a/0x02-CSS_advanced/styles/14-style.css
+++ b/0x02-CSS_advanced/styles/14-style.css
@@ -201,6 +201,7 @@
   [type="reset"],
   [type="submit"] {
     -webkit-appearance: button;
+    appearance: button;
   }
   
   /**
@@ -292,7 +293,8 @@
    */
   
   [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
+    -webkit-appearance: textfield;
+    appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
   }
   
