--- a/0x02-CSS_advanced/styles/15-style.css
+++ b/0x02-CSS_advanced/styles/15-style.css
@@ -199,14 +199,15 @@
   button,
   [type="button"],
   [type="reset"],
-  [type="submit"]{
+  [type="submit"] {
     -webkit-appearance: button;
+    appearance: button;
     /* 1 */
     background-color: transparent;
     /* 2 */
     background-image: none;
     /* 2 */
-}
+ }
   /**
    * Remove the inner border and padding in Firefox.
    */
@@ -296,7 +297,8 @@
    */
   
   [type="search"] {
-    -webkit-appearance: textfield; /* 1 */
+    -webkit-appearance: textfield;
+    appearance: textfield; /* 1 */
     outline-offset: -2px; /* 2 */
   }
   
